# tf2-enum

./: CHANGELOG.md  Cargo.toml  README.md
benches/: find_level.rs  match_vs_hashmap.rs
src/: attribute_def.rs  attribute_value.rs  capability.rs  class.rs  craft_class.rs  craft_material_type.rs  description_format.rs  drop_type.rs  econ_attributes.rs  effect_type.rs  error.rs  flags.rs  gc_item_sort.rs  grade.rs  holiday_restriction.rs  item_attribute.rs  item_level.rs  item_slot.rs  kill_eater_score_type.rs  killstreak_tier.rs  killstreaker.rs  lib.rs  origin.rs  paint.rs  prelude.rs  quality.rs  rarity.rs  serialize.rs  sheen.rs  spell.rs  spell_set.rs  sqlx_macros.rs  stock_weapon.rs  strange_part.rs  strange_part_set.rs  traits.rs  wear.rs
