[package]
name = "tf2-enum"
version = "0.13.0"
edition = "2021"
# MSRV
rust-version = "1.75.0"
description = "Provides enumerated types for models related to the Team Fortress 2 item schema."
authors = ["Julia"]
homepage = "https://github.com/juliarose/tf2-enum"
repository = "https://github.com/juliarose/tf2-enum"
license = "MIT"
keywords = ["tf2", "steam", "enum"]
readme = "README.md"

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_repr = "^0.1"
strum = { version = "^0.27", features = ["derive"] }
num_enum = "^0.7"

[dev-dependencies]
serde_json = "^1.0"
assert_json = "0.1.0"
criterion = "0.3"

[[bench]]
name = "find_level"
harness = false

[[bench]]
name = "match_vs_hashmap"
harness = false
